fixed alignment issue of last step fields on wizard

--- a/src/app/components/core/configuration-manager/show-configuration/show-configuration.component.css
+++ b/src/app/components/core/configuration-manager/show-configuration/show-configuration.component.css
@@ -13,20 +13,9 @@
 }
 
 @media screen and (min-width: 769px) {
-  .view-content {
-    display: block !important;
-  }
-}
-
-@media screen and (min-width: 769px) {
   .field-body {
     flex-grow: 2 !important;
   }
-}
-
-.config-div {
-  margin-top: 1vw;
-  margin-bottom: 1vw;
 }
 
 .error {
