--- a/src/app/components/core/south/south-service-modal/south-service-modal.component.css
+++ b/src/app/components/core/south/south-service-modal/south-service-modal.component.css
@@ -55,9 +55,6 @@ a {
 }
 
 @media screen and (min-width: 769px) {
-  .view-content {
-    display: block !important;
-  }
   .margin-bottom {
     margin-bottom: -0.75rem;
   }
