--- a/src/app/components/core/user-management/user-profile/user-profile.component.css
+++ b/src/app/components/core/user-management/user-profile/user-profile.component.css
@@ -1,7 +1,3 @@
 .link-is-small {
     font-size: 0.9rem;
 }
-
-.auth-method {
-    text-transform: capitalize;
-}
