--- a/src/styles.css
+++ b/src/styles.css
@@ -364,4 +364,18 @@ a.dropdown-item:hover {
     padding-left: 16px;
   }
 
+  .config-div {
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+  }
+
+  @media screen and (min-width: 769px) {
+    .view-content {
+      display: block !important;
+    }
+  
+    .last-step-field {
+      flex-grow: 2 !important;
+    }
+  }
  /*****************/
